# evision-dl

./: README.md  download_evision_pdfs.py  pyproject.toml
evision_dl/: __init__.py  applicant_context.py  expected_conditions.py  logging.py  robot.py  xpath.py
evision_dl/screen/: __init__.py  empty.py  gpo.py  request_pdf.py
src/evision_dl/: __init__.py  applicant.py  applicant_context.py  download.py  event.py  expected_conditions.py  logging.py  main.py  robot.py  summary.py  xpath.py
src/evision_dl/screen/: __init__.py  application.py  application_details.py  application_done.py  gpo.py  request_pdf.py  request_pdf_trouble.py  start.py
